@@ -1,3 +1,7 @@
+Changes in NEXT
+===============
+	* pstree: Do not crash on missing processes !21
+
 Changes in 23.3
 ===============
 	* killall: check also truncated 16 char comm names Debian #912748
@@ -5,6 +9,7 @@ Changes in 23.3
 	* peekfd: Add support for ARM64 !19
 	* pstree: Add color by age #21
 	* fuser: Use larger inode sizes #16
+
 Changes in 23.2
 ===============
 	* misc: Command names increased from 16 to 64 characters
